          Alt-T toggles the toolbar).
        
        * when using IEView in template mode, the toolbar button and the menu bar entry
          for changing message log settings are now disabled, because they do not have
          any effect in template mode.
          
        * vertical maximize can now be set quickly from the menu bar (view menu).
                  
Version 0.9.9.8 - 2005/03/04

        + added icon pack version information. Valid icon packs need to contain a string
          identifier ("__tabSRMM_ICONPACK 1.0__") in order to be recognized. You can still
          load icon packs without this identifier, but you'll get a warning message.
          This was added to avoid problems when specifiyng a DLL which is, in fact, not
          a valid icon pack for tabSRMM. In such cases, the plugin could even crash badly
          on startup, which can be a very annoying (and hard to find) bug.
          
          Also, with version information in the icon pack, future versions of tabsrmm may
          work with "old" icon packs.
          
          When you edit an iconpack, DO NOT change the string table identifier. The ordinal
          number for the string identifier is 101.
          
          The version check can be disabled on the "tabs and layout" page (just below the
          option to load a new icon pack at runtime) by unchecking "Perform version check on Icon DLL"
          
        + added option to "vertical maximize" a container (per container setting). If enabled,
          a container is maximized only in its vertical dimension, so that the window will
          take the entire screen *height*, but will keep its current width. When disabled,
          the container will show default maximize behaviour (taking entire screen).
          
        ! fixed bug with soft line feeds (SHIFT-Enter) when sending formatting info is enabled.
        
        * changing message log or other option will no longer wipe the text from the input